2001-09-16  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp: fix unrecognized input
	* pp/opf_container.cpp: better error messages. put
	  op_nr_counters in the global namespace (gcc 2.91
	  work around)

2001-09-16  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.cpp: small tidy
 
2001-09-16  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp: minor tidy

	* gui/oprof_start.base.ui: new oprof_start gui
	* gui/oprof_start.cpp: new, derived class of oprof_start_base
	* gui/oprof_start.h: ditto
	* gui/oprof_start_impl.cpp: implementation of oprof_start class
	* gui/oprof_start_config.cpp: utilities function for oprof_start
	* gui/oprof_start_config.h: ditto
	* gui/persistent_config.h: utility template
	* gui/oprof_start_main.cpp: main() for oprof_start
	* gui/Makefile.in: handle this stuff

2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: some cleanup
 
2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: allow non-matching mtimes in order
	  to allow pp on different machines. Make conflicting
	  counter specifications a fatal error

2001-09-15  John Levon  <moz@compsoc.man.ac.uk>

	* all Makefile.in: install should depend on all

	* pp/oprofpp.c: fixes for Athlon 4 counters. Enable debug info
	  for list-symbol. Some stricter checking

2001-09-15  Philippe Elie  <ph_e@club-internet.fr>

	* op_events.c: some static variable to global
	* op_user.h: export these

	* oprofile.c: typo in comment

	* dae/opd_proc.c: fix size of samples files

2001-09-13  Dave Jones  <davej@suse.de>

	* doc/oprofile.1.in:
	  Update so it doesn't say 'Intel only'
	* dae/op_start:
	  Fix output so that it prints [0-3] instead of [0-4[

2001-09-12  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.c: fix cpu type output for opf_filter

	* dae/op_stop: return error code properly

2001-09-12  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.c: print name of cpu type
 
	* dae/op_stop:
	* dae/op_start: re-organise, tidy
 