@@ -1,3 +1,15 @@
+2001-09-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* acinclude.m4:
+	* autogen.sh:
+	* configure.in: 
+	* gui/Makefile.in:
+	* gui/ui/Makefile.in:
+	* gui/ui/oprof_start.base.ui: 
+	* gui/oprof_start.h: autoconfiscation for Qt2
+
+	* gui/oprof_start_config.cpp: add comments
+ 
 2001-09-16  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_filter.cpp: fix unrecognized input
